# RIPO

./: .gitignore
program/: pyproject.toml  settings.json
program/configurator/: __main__.py  app.py  load_config.py
program/program/: __main__.py  line_drawing.py  recognition.py
program/runs/detect/cars/: args.yaml  results.csv
program/runs/detect/curb/: args.yaml  results.csv
program/runs/detect/curb2/: args.yaml
program/runs/detect/train/: args.yaml
program/runs/detect/train10/: args.yaml  results.csv
program/runs/detect/train2/: args.yaml
program/runs/detect/train3/: args.yaml
program/runs/detect/train4/: args.yaml
program/runs/detect/train5/: args.yaml
program/runs/detect/train6/: args.yaml
program/runs/detect/train7/: args.yaml
program/runs/detect/train8/: args.yaml  results.csv
program/runs/detect/train9/: args.yaml  results.csv
program/runs/detect/tree/: args.yaml
program/runs/detect/tree2/: args.yaml
program/runs/detect/tree3/: args.yaml
program/runs/detect/tree4/: args.yaml
program/runs/detect/tree5/: args.yaml
program/runs/detect/tree6/: args.yaml  results.csv
program/runs/detect/tree7/: args.yaml  results.csv
program/runs/detect/tree8/: args.yaml  results.csv
program/runs/detect/tree9/: args.yaml
program/training/: __train__.py
program/training/cars/: README.dataset.txt  README.roboflow.txt  data.yaml
program/training/cars/train/: labels.cache
program/training/curbs/: README.dataset.txt  README.roboflow.txt  data.yaml
program/training/tree/: data.yaml
program/training/tree_old/: data.yaml
(+2539 files in other folders)
