[tool.poetry]
name = "program"
version = "0.1.0"
description = ""
authors = ["Jakub <jakubmisiurka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
opencv-python = "^4.9.0.80"
ultralytics = "^8.2.14"
streamlit = "^1.34.0"
numpy = "^1.26.4"

[tool.poetry.scripts]
start = "program.__main__:main"
config = "configurator.__main__:run_app"
# detect = "program.__detect__:detect"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
